vlib/v/checker/tests/assign_multi_immutable_err.vv
fn main() {
	a := 10
	b := 20
	a, b = 1, 2

	println('$a, $b')
}

fn f() int {
	return 2
}

fn g() (int, int) {
  return 1, 2
}

fn assign_fn() {
	_, error = g()
	g = f()
}

